[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/puzzleLife.gd" type="Script" id=1]
[ext_resource path="res://assets/puzzles/s1 senha2.png" type="Texture" id=2]
[ext_resource path="res://assets/panel.png" type="Texture" id=3]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=4]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Pixel_Berry_08_84_Ltd.Edition.fnt" type="BitmapFont" id=6]
[ext_resource path="res://addons/GodotSTM/simple_text_menu.gd" type="Script" id=7]
[ext_resource path="res://addons/GodotSTM/GodotSTM_icon.png" type="Texture" id=8]

[node name="puzzleLife" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 284.0
margin/top = 35.0
margin/right = 1255.0
margin/bottom = 799.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Panel" type="Patch9Frame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 421.0
margin/right = 991.0
margin/bottom = 584.0
texture = ExtResource( 3 )
patch_margin/left = 20
patch_margin/top = 4
patch_margin/right = 20
patch_margin/bottom = 4

[node name="TIE" type="ReferenceFrame" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 22.0
margin/right = 940.0
margin/bottom = 149.0
script/script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = ExtResource( 6 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="OptionPanel" type="Patch9Frame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 607.0
margin/top = 265.0
margin/right = 987.0
margin/bottom = 428.0
texture = ExtResource( 3 )
patch_margin/left = 20
patch_margin/top = 4
patch_margin/right = 20
patch_margin/bottom = 4

[node name="SimpleTextMenu" type="Control" parent="OptionPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 34.0
margin/top = 16.0
margin/right = 358.0
margin/bottom = 148.0
script/script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}
options = "Uma vassoura
Um guarda-chuva
Um graveto
Uma espada de bal√£o rosa"
orientation = 1
offset = 2
options_font = ExtResource( 6 )
signal_argument = 0
initial_option = 0
cursor_side = 0
cursor_offset = 0
blinking_cursor_rate = 0.0
options_color = Color( 1, 1, 1, 1 )
cursor_color = Color( 1, 1, 1, 1 )
menu_enabled = true

[connection signal="buff_end" from="Panel/TIE" to="." method="_on_TIE_buff_end"]

[connection signal="input_enter" from="Panel/TIE" to="." method="_on_TIE_input_enter"]


